--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build && vite build --ssr && node scripts/generate.js",
-    "preview": "vite preview --outDir dist"
+    "preview": "npm run build && vite preview --outDir dist"
   },
   "author": "",
   "license": "ISC",
